# ggtools

./: .gitignore  Cargo.toml  build.rs  rustfmt.toml
.github/workflows/: build.yml
common/: Cargo.toml
common/src/: config.rs  default_option.rs  lib.rs  macros.rs  models.rs  utils.rs
discord_bot/: Cargo.toml
discord_bot/src/: database.rs  lib.rs
discord_bot/src/commands/: admin.rs  meta.rs  mod.rs  owner.rs  server.rs
patcher/: Cargo.toml
patcher/patches/: 0gb.patch  remote_set.patch
patcher/src/: lib.rs
server/: Cargo.toml
server/assets/static/css/: style.css
server/assets/templates/: base.html.tera  index.html.tera  instance.html.tera
server/src/: api_key.rs  embed_file.rs  lib.rs  mods.rs  server_manager.rs  templates.rs
server/src/routes/: api.rs  index.rs  instance.rs  mod.rs  static_files.rs
src/: app_info.rs  discord_bot.rs  gcp.rs  patcher.rs
