[package]
name = "rgcp"
version = "1.0.2"
authors = [""]
edition = "2018"

description = ""
license = ""
repository = ""

build = "build.rs"
default-run = "gcp"

[[bin]]
name = "gcp"
path = "src/gcp.rs"
required-features = ["rgcp_server"]

[[bin]]
name = "patcher"
path = "src/patcher.rs"
required-features = ["rgcp_patcher"]

[dependencies] 
rgcp_common = { path = "common" }
rgcp_server = { path = "server", optional = true }
rgcp_patcher = { path = "patcher", optional = true }
futures = "0.3"
serde_json = { version = "1.0" }

[build-dependencies]
built = { version = "0.4.4", features = ["git2", "chrono"] }

[features]
default = ["server", "rgcp_patcher"]
server = ["rgcp_server"]
patcher = ["rgcp_patcher"]

