[package]
name = "rgcp_discord_bot"
version = "0.1.0"
authors = [""]
edition = "2018"

[dependencies]
rgcp_common = { path = "../common" }
dotenv = { version = "0.15.0" }
env_logger = { version = "0.7.1" }
lazy_static = { version = "1.4.0" }
log = { version = "0.4.8"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serenity = { version = "0.7.4", features = ["framework", "standard_framework", "cache"] }
sled = { version = "0.31.0" }
reqwest = { version = "0.9.24", deault-features = false, features = ["rustls-tls"] }