[package]
name = "rgcp_patcher"
version = "0.0.0"
authors = [""]
edition = "2018"

[dependencies]
rgcp_common = { path = "../common" }
directories = { version = "2.0.2" }
iced = { version = "0.1.0-beta" }
nfd = { version = "0.0.4" }
qbsdiff = { version = "1.2" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48" }