[package]
name = "rgcp_patcher"
version = "0.0.0"
authors = [""]
edition = "2018"

[dependencies]
rgcp_common = { path = "../common" }
directories = { version = "3.0.1" }
iced = { version = "0.3.0" }
nfd = { version = "0.0.4" }
qbsdiff = { version = "1.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }