[package]
name = "rgcp_server"
version = "0.0.0"
authors = [""]
edition = "2018"

[dependencies]
rgcp_common = { path = "../common" }
dirs = { version = "2.0.2" }
futures = { version = "0.3" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.3.4" }
rocket = { version = "0.4.2", default-features = false }
rocket_contrib = { version = "0.4.2", default-features = false, features = ["json"] }
rust-embed = { version = "5.2.0", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11.1" }
serde_json = { version = "1.0" }
tera = { version = "1.0.2" }
sled = { version = "0.31.0" }
rand = { version = "0.7.3" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "jobapi2", "impl-default", "std"] }