[package]
name = "rgcp_server"
version = "0.0.0"
authors = [""]
edition = "2018"

[dependencies]
rgcp_common = { path = "../common" }
dirs = { version = "3.0" }
futures = { version = "0.3" }
lazy_static = { version = "1.4.0" }
regex = { version = "1.3" }
rocket = { version = "0.4", default-features = false }
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
rust-embed = { version = "5.2", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = { version = "0.11" }
serde_json = { version = "1.0" }
tera = { version = "1.5" }
sled = { version = "0.34" }
rand = { version = "0.7" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "jobapi2", "impl-default", "std"] }